# beanquery

./: .gitignore  .pylintrc  .ruff.toml  CHANGES.rst  NOTES.md  Pipfile  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: checks.yaml  docs.yml  test.yaml  wheels.yaml
beanquery/: __init__.py  __main__.py  compat.py  compiler.py  cursor.py  cursor_test.py  errors.py  hashable.py  hashable_test.py  numberify.py  numberify_test.py  parser_test.py  query.py  query_compile.py  query_compile_test.py  query_env.py  query_env_test.py  query_execute.py  query_execute_test.py  query_parser.py  query_parser_test.py  query_render.py  query_render_test.py  query_test.py  shell.py  shell_test.py  tables.py  test_utils.py  types.py  types_test.py
beanquery/parser/: __init__.py  ast.py  bql.ebnf  parser.py
beanquery/render/: beancount.py  csv.py  text.py
beanquery/sources/: beancount.py  csv.py  memory.py  test.py
beanquery/tests/: tables.py
docs/: conf.py  logo.inkscape
etc/: env
