[metadata]
name = beanquery
version = 0.1.dev0
description = Beancount Query Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beancount/beanquery
author = Martin Blais
author_email = blais@furius.ca
keywords = accounting ledger beancount SQL BQL
license = GPL-2.0
license_file = COPYING
project_urls =
    Bug Tracker = https://github.com/beancount/beanquery/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: SQL
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Text Processing :: General

[options]
include_package_data = True
packages = find:
install_requires =
    beancount >=3.0.dev0
    click >7.0
    ply
    python-dateutil

[options.entry_points]
console_scripts =
    bean-query = beanquery.shell:main
