[metadata]
name = beanquery
version = 0.1.dev0
description = Beancount Query Language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beancount/beanquery
author = Martin Blais
author_email = blais@furius.ca
maintainer = Daniele Nicolodi
maintainet_email = daniele@grinta.net
keywords = accounting ledger beancount SQL BQL
license = GPL-2.0
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/beancount/beanquery/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: SQL
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Text Processing :: General

[options]
include_package_data = True
packages = find:
install_requires =
    beancount >=2.3.4
    click >7.0
    python-dateutil >=2.6.0
    tatsu >=5.7.4, <5.8.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    bean-query = beanquery.shell:main
